# prony

./: .gitignore  CMakeLists.txt  README.md  calc.hpp  conf_window.glade  down_fig.m  inverse_problem.ipynb  main.cpp  shader.hpp
oglplus/: CMakeLists.txt
oglplus/oglplus/: access_specifier.hpp  all.hpp  assert.hpp  bitfield.hpp  blend_function.hpp  blit_filter.hpp  boolean.hpp  buffer.hpp  buffer_binding.hpp  buffer_data.hpp  buffer_gpu_addr.hpp  buffer_map.hpp  buffer_map_access.hpp  buffer_select_bit.hpp  buffer_size.hpp  buffer_storage_bit.hpp  buffer_target.hpp  buffer_usage.hpp  capability.hpp  client_context.hpp  clip_control.hpp  color_buffer.hpp  color_logic_operation.hpp  compare_function.hpp  context.hpp  context_flag_bit.hpp  context_profile_bit.hpp  context_release_behavior.hpp  data_type.hpp  draw_buffer_index.hpp  enumerations.hpp  extension.hpp  face_mode.hpp  fix_gl_extension.hpp  fix_gl_version.hpp  frag_data.hpp  frag_data_slot.hpp  framebuffer.hpp  framebuffer_attachment.hpp  framebuffer_parameter.hpp  (+61 more)
oglplus/oglplus/bound/: buffer.hpp  framebuffer.hpp  renderbuffer.hpp  texture.hpp
oglplus/oglplus/client/: blending.hpp  buffer_clearing.hpp  buffer_masking.hpp  capabilities.hpp  clip_control.hpp  computing.hpp  depth_test.hpp  drawing.hpp  hints.hpp  limit_queries.hpp  logic_ops.hpp  numeric_queries.hpp  pixel_ops.hpp  rasterization.hpp  scissor_test.hpp  setting.hpp  stencil_test.hpp  string_queries.hpp  synchronization.hpp  viewport.hpp
oglplus/oglplus/config/: basic.hpp  compiler.hpp  enums.hpp  error.hpp  gl.hpp  object.hpp  site.hpp  (+1 more)
(+371 files in other folders)
